--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,60 @@
 // app global css in SCSS form
+
+.scrollbar-hidden {
+  &::-webkit-scrollbar,
+  &::-webkit-scrollbar-thumb {
+    display: none;
+    width: 0px;
+  }
+
+  & {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+
+html.dark {
+  --yt-spec-text-secondary: #aaa;
+  ::-webkit-scrollbar {
+    width: 16px;
+  }
+  ::-webkit-scrollbar-thumb {
+    height: 56px;
+    border-radius: 8px;
+    border: 4px solid transparent;
+    background-clip: content-box;
+    background-color: var(--yt-spec-text-secondary);
+  }
+  ::-webkit-scrollbar-thumb {
+    height: 56px;
+    border-radius: 8px;
+    border: 4px solid transparent;
+    background-clip: content-box;
+    background-color: hsl(0, 0%, 67%);
+  }
+}
+
+html {
+  ::-webkit-scrollbar {
+    width: 12px;
+    background-color: transparent;
+    height: 12px;
+  }
+
+  ::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #323232;
+    transition: background 0.2s ease-in-out;
+    border: 3px solid transparent;
+    background-clip: content-box;
+    // background-color: #e5e7eb;
+    border-radius: 9999px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+}
